--- a/Identity/Areas/Admin/Views/User/Index.cshtml
+++ b/Identity/Areas/Admin/Views/User/Index.cshtml
@@ -32,6 +32,7 @@
 					</td>
 					<td class="text-gray-500 text-center " style="transform:translateY(20px);">
 						<a class="btn btn-primary" asp-controller="User" asp-action="Update" asp-route-id="@user.Id">Update</a>
+						<a class="btn btn-outline-info" asp-controller="User" asp-action="Detail" asp-route-id="@user.Id">Detail</a>
 						<form class="d-inline" method="post" asp-controller="User" asp-action="Delete" asp-route-id="@user.Id">
 							<button type="submit" class="btn btn-outline-danger">Delete</button>
 						</form>
