reset password add

--- a/Identity/Views/Account/Login.cshtml
+++ b/Identity/Views/Account/Login.cshtml
@@ -30,6 +30,8 @@
 							<button type="submit" class="form-control btn btn-primary submit px-3">Login</button>
 						</div>
 					</form>
+					<a asp-action="ForgetPassword" asp-controller="Account">Do you forgot your password?</a>
+					<br />
 					<h3 class="mb-4 text-center">Create an account?</h3>
 					<p class="w-100 text-center">&mdash; <a asp-controller="Account" asp-action="Register">Register</a> &mdash;</p>
 
