--- a/Identity/Areas/Admin/Views/User/Update.cshtml
+++ b/Identity/Areas/Admin/Views/User/Update.cshtml
@@ -1,8 +1,7 @@
 ﻿@using Identity.Areas.Admin.Models.User
-@model UserCreateVM
-<form  class="w-75 ml-4" asp-controller="User" asp-action="Create" method="post">
+@model UserUpdateVM
+<form class="w-75 ml-4" asp-controller="User" asp-action="Update" method="post">
 	<div asp-validation-summary="All"></div>
-
 	<div class="form-group">
 		<label asp-for="EmailAddress"></label>
 		<input asp-for="EmailAddress" class="form-control" placeholder="Enter email" />
@@ -28,22 +27,22 @@
 		<span class="text-danger" asp-validation-for="PhoneNumber"></span>
 	</div>
 	<div class="form-group">
-		<label asp-for="Password"></label>
-		<input asp-for="Password" class="form-control" placeholder="Enter Password" />
-		<span class="text-danger" asp-validation-for="Password"></span>
+		<label asp-for="NewPassword"></label>
+		<input asp-for="NewPassword" class="form-control" placeholder="Enter NewPassword" />
+		<span class="text-danger" asp-validation-for="NewPassword"></span>
 	</div>
-	
+
 	<div class="form-group">
-		<label asp-for="ConfirmPassword"></label>
-		<input asp-for="ConfirmPassword" class="form-control" placeholder="Enter Confirm Password" />
-		<span class="text-danger" asp-validation-for="ConfirmPassword"></span>
+		<label asp-for="NewConfirmPassword"></label>
+		<input asp-for="NewConfirmPassword" class="form-control" placeholder="EnterNew Confirm Password" />
+		<span class="text-danger" asp-validation-for="NewConfirmPassword"></span>
 	</div>
 	<div class="form-group">
 		<label asp-for="RolesIds"></label>
-		<select asp-for="RolesIds" asp-items="@Model.Roles" class="form-control" multiple > </select>
+		<select asp-for="RolesIds" asp-items="@Model.Roles" class="form-control" multiple> </select>
 		<span class="text-danger" asp-validation-for="RolesIds"></span>
 	</div>
 
-	<button type="submit" class="btn btn-primary">CREATE</button>
+	<button type="submit" class="btn btn-primary">Update</button>
 	<a class="btn btn-outline-info" asp-controller="User" asp-action="Index">Cancel</a>
 </form>
